--- a/myself.yaml
+++ b/myself.yaml
@@ -8,9 +8,19 @@ external-controller: 127.0.0.1:9090
 proxies:
   - name: "MyVPS"
     type: vless
-    server: 47.79.148.94      # ← 改成你的VPS IP
+    server: 47.79.148.94
     port: 10086
-    uuid: bcfb953a-8d95-48f4-9b2d-edab0188d4d5  # ← 你的UUID
+    uuid: bcfb953a-8d95-48f4-9b2d-edab0188d4d5
+    tls: false
+    network: ws
+    ws-opts:
+      path: /ws
+
+  - name: "HK-Relay"
+    type: vless
+    server: 240b:4001:278:8401:0:114a:ac1c:2179
+    port: 10086
+    uuid: 66d71bdc-78ee-4bd9-9b8f-20734ad56484
     tls: false
     network: ws
     ws-opts:
@@ -20,8 +30,15 @@ proxy-groups:
   - name: 🚀 国外流量
     type: select
     proxies:
-      - MyVPS
+      - Relay-HK-US     # ① 晚高峰用中继
+      - MyVPS           # ② 原直连备用
       - DIRECT
+
+  - name: Relay-HK-US
+    type: relay
+    proxies:
+      - HK-Relay        # ① 先跳到香港
+      - MyVPS           # ② 再从香港到美国
 
 rules:
   - MATCH,🚀 国外流量
