--- a/myself.yaml
+++ b/myself.yaml
@@ -1,44 +1,20 @@
-port: 7890
-socks-port: 7891
-allow-lan: true
-mode: rule
-log-level: info
-external-controller: 127.0.0.1:9090
-
 proxies:
-  - name: "MyVPS"
+  - name: "香港中转节点"
     type: vless
-    server: 47.79.148.94
-    port: 10086
-    uuid: bcfb953a-8d95-48f4-9b2d-edab0188d4d5
+    server: 47.82.69.174   # ← 替换为香港VPS的真实IP
+    port: 10010                # ← socat 监听的端口
+    uuid: bcfb953a-8d95-48f4-9b2d-edab0188d4d5  # ← 保持与日本VPS相同的UUID
     tls: false
     network: ws
     ws-opts:
-      path: /ws
-
-  - name: "HK-Relay"
-    type: vless
-    server: 240b:4001:278:8401:0:114a:ac1c:2179
-    port: 10086
-    uuid: e0718373-e5e9-4f60-95bc-46bd66fcbf34
-    tls: false
-    network: ws
-    ws-opts:
-      path: /ws
+      path: /ws                # ← 保持与日本VPS相同的路径
 
 proxy-groups:
   - name: 🚀 国外流量
     type: select
     proxies:
-      - Relay-HK-US     # ① 晚高峰用中继
-      - MyVPS           # ② 原直连备用
+      - 香港中转节点           # ← 使用新的香港节点
       - DIRECT
-
-  - name: Relay-HK-US
-    type: relay
-    proxies:
-      - HK-Relay        # ① 先跳到香港
-      - MyVPS           # ② 再从香港到美国
 
 rules:
   - MATCH,🚀 国外流量
